fix(protocol-designer): add vertical spacing back to form fields
Fix the field spacing regression introduced in #2580

Closes #2597

--- a/protocol-designer/src/components/forms.css
+++ b/protocol-designer/src/components/forms.css
@@ -15,6 +15,10 @@
   padding-bottom: 1rem;
 }
 
+.stacked_row:not(:last-child) {
+  margin-bottom: 0.5rem;
+}
+
 /* NOTE: explicit column classes should only be used for forms with a layout
  * that doesn't match the layout of transfer/distribute/consolidate/mix.
  * Eg the Pause form is an example of an exceptional layout.
